infra/rds.tf
resource "aws_db_subnet_group" "default" {
  name       = "saas-db-subnet-group"
  subnet_ids = local.private_subnet_ids
}

resource "aws_db_instance" "app_db" {
  identifier             = "saas-db"
  engine                 = "postgres"
  instance_class         = "db.t3.micro"
  allocated_storage      = 20
  db_name                = "saasdb"
  username               = var.db_user
  password               = var.db_password
  publicly_accessible    = false
  skip_final_snapshot    = true
  db_subnet_group_name   = aws_db_subnet_group.default.name
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
}
